Add content of jvm tuning